--- a/Glassmorphism Effects/style.css
+++ b/Glassmorphism Effects/style.css
@@ -36,6 +36,7 @@ body{
     transition: 0.5s;
     border-radius: 10px;
     margin: 0 -45px;
+    cursor: pointer;
     transform: rotate(calc(var(--r) * 1deg ));
 }
 
