--- a/Pulse Effects/style.css
+++ b/Pulse Effects/style.css
@@ -75,4 +75,9 @@ body{
 .pulse:hover{
     transform: scale(1.3);
     transition: transform 1s ease-in-out, box-shadow 1s ease-in-out;
+    border: 1px solid #ff1212;
+    box-shadow: inset 0 0 40px #ff1212, 0 0 50px #ff1212;
+    span{
+        border: 1px solid #ff1212;
+    }
 }
