--- a/Sliding Effects/style.css
+++ b/Sliding Effects/style.css
@@ -71,3 +71,12 @@ html, body{
 #btn:nth-child(2):hover::before{
     height: 100%;
 }
+
+#notice {
+    display: none;
+    padding: 10px;
+    margin-top: 10px;
+    background-color: #0bffeb;
+    color: rgb(235, 0, 0);
+    border-radius: 5px;
+}
