--- a/Loading Effects 3/style.css
+++ b/Loading Effects 3/style.css
@@ -52,8 +52,8 @@ body{
         rotate: 360deg;
     }
     40%{
-        background: #0f0;
-        box-shadow: 0 0 5px #0f0,
+        background: rgb(119, 79, 230);
+        box-shadow: 0 0 5px rgb(177, 60, 245),
                     0 0 15px #0f0,
                     0 0 30px #0f0,
                     0 0 50px #0f0;
