--- a/Guess Word/style.css
+++ b/Guess Word/style.css
@@ -18,6 +18,7 @@ body{
     place-items: center;
     height: 100vh;
     line-height: 1.5;
+    user-select: none;
 }
 
 .game{
@@ -77,4 +78,32 @@ body{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 10px;
+}
+
+input, button{
+    border: none;
+    background: none;
+    font: inherit;
+    color: inherit;
+}
+
+.game-guess{
+    grid-column: 1 / -1;
+    padding: 5px;
+    border: 2px solid #fff;
+}
+
+.game-button{
+    padding: 10px;
+    box-shadow: 5px 5px #090909;
+    cursor: pointer;
+    margin-top: 10px;
+}
+
+.game-button-play{
+    background-color: green;
+}
+
+.game-button-reset{
+    background-color: blue;
 }
