--- a/Puzzle Game/style.css
+++ b/Puzzle Game/style.css
@@ -54,7 +54,17 @@ body{
     color: #333;
     cursor: pointer;
     border-radius: 10px;
-    transition: all 0.5s ease-in-out;
+    transition: all 0.15s ease-in-out;
+}
+
+.puzzle-container .tile:hover{
+    transform: scale(1.1);
+    background: #D1D14A;
+}
+
+.tile.empty,
+.tile.empty:hover{
+    background: rgba(0, 0, 0, 0.1);
 }
 
 #shuffle-btn{
