--- a/AI Image Detector/style.css
+++ b/AI Image Detector/style.css
@@ -106,3 +106,25 @@ button:hover{
     border-radius: 10px;
 }
 
+.toast{
+    visibility: hidden;
+    max-width: 340px;
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    border-radius: 10px;
+    padding: 16px;
+    position: fixed;
+    z-index: 1;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 50px;
+    font-size: 17px;
+    transition: visibility 0s, opacity 0.5s linear;
+    opacity: 0;
+}
+
+.toast.show{
+    visibility: visible;
+    opacity: 1;
+}
