--- a/AI Image Detector/style.css
+++ b/AI Image Detector/style.css
@@ -55,7 +55,7 @@ button:hover{
 
 .upload-container .buttons{
     display: flex;
-    gap: 10px
+    gap: 10px;
 }
 
 .upload-container img{
@@ -67,11 +67,88 @@ button:hover{
     border-radius: 10px;
 }
 
-.colors-container h3{
+/* .colors-container h3{
     width: 65%;
     display: flex;
     flex-direction: column;
     gap: 20px;
+} */
+
+.colors-container{
+    width: 65%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.colors-container h3{
+    display: block;
+}
+
+.colors-container h3:not(:first-child){
+    margin-top: 20px;
+}
+
+.colors-container .results{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 12px;
+}
+
+.colors-container .results .result-item{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 49%;
+    gap: 10px;
+    background-color: #262626;
+    padding: 10px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+}
+
+.colors-container .results .result-item:hover{
+    background-color: #07090e;
+}
+
+.colors-container .results .result-item .color-box{
+    width: 30px;
+    height: 30px;
+    border-radius: 10px;
+}
+
+.colors-container .results .result-item>div{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.progress-bar{
+    width: 35%;
+    background-color: #fff;
+    height: 14px;
+    border-radius: 10px;
+    overflow: hidden;
+    position: relative;
+    margin-left: 16px;
+}
+
+.progress{
+    background-color: #d5224e;
+    height: 100%;
+    width: 0;
+}
+
+.progress-bar span{
+    position: absolute;
+    width: 100%;
+    text-align: center;
+    z-index: 1;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 12px;
+    color: #000;
 }
 
 .tags-container{
@@ -83,6 +160,32 @@ button:hover{
 
 .tags-container h3{
     margin-bottom: 30px;
+}
+
+.tags-container .results{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+.tags-container .results .result-item{
+    display: flex;
+    background-color: #262626;
+    padding: 6px 20px;
+    border-radius: 10px;
+}
+
+.tags-container .buttons{
+    margin-top: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+#seeMoreButton, 
+#exportTagsButton{
+    padding: 8px 30px;
 }
 
 .modal{
@@ -106,9 +209,24 @@ button:hover{
     border-radius: 10px;
 }
 
+.modal-content .progress-bar{
+    background-color: #fff;
+    border-radius: 10px;
+    margin-top: 20px;
+    width: 100%;
+    margin-left: 0;
+}
+
+.modal-content .progress{
+    background-color: #d5224e;
+    border-radius: 10px;
+    width: 0;
+    transition: all 0.3s ease-in-out;
+}
+
 .toast{
     visibility: hidden;
-    max-width: 340px;
+    max-width: 400px;
     background-color: #333;
     color: #fff;
     text-align: center;
@@ -127,4 +245,45 @@ button:hover{
 .toast.show{
     visibility: visible;
     opacity: 1;
+}
+
+.error{
+    color: red;
+}
+
+@media screen and (max-width: 1350px){
+    .colors-container .results .result-item p span{
+        display: none;
+    }
+
+    .progress-bar{
+        width: 45%;
+    }    
+}
+
+@media screen and (max-width: 1120px){
+    .wrapper{
+        flex-direction: column;
+    }
+
+    .upload-container,
+    .colors-container{
+        width: 100%;
+    }
+
+    .colors-container .results .result-item{
+        width: 32%;
+    }
+}
+
+@media screen and (max-width: 768px){
+    .colors-container .results .result-item{
+        width: 48%;
+    }
+}
+
+@media screen and (max-width: 576px){
+    .colors-container .results .result-item{
+        width: 100%;
+    }
 }
