--- a/Gemini Clone/style.css
+++ b/Gemini Clone/style.css
@@ -139,3 +139,97 @@ body.hide-header .header{
 .suggests__item-icon{
     text-align: right;
 }
+
+.suggests__item-icon i{
+    font-size: 1.5rem;
+    background: var(--primary-color);
+    padding: 0.5rem;
+    border-radius: 50%;
+}
+
+.prompt{
+    position: fixed;
+    background: var(--primary-color);
+    z-index: 1000;
+    width: 100%;
+    left: 0;
+    bottom: 0;
+    padding: 1rem;
+}
+
+.prompt__input-wrapper{
+    width: 100%;
+    height: 4rem;
+    display: flex;
+    position: relative;
+}
+
+.prompt__form-input{
+    height: 100%;
+    width: 100%;
+    border: none;
+    resize: none;
+    font-size: 1rem;
+    color: var(--text-color);
+    padding: 1rem 1.75rem;
+    border-radius: 100px;
+    background: var(--secondary-color);
+    transition: background 0.3s ease;
+}
+
+.prompt__form-input:focus{
+    background: var(--focus-color);
+}
+
+.prompt__form-input:focus
+~ .prompt__form-button:hover{
+    background: var(--focus-hover-color);
+}
+
+.prompt__form-input::placeholder{
+    color: var(--placeholder-color);
+}
+
+.prompt__form-button{
+    position: absolute;
+    right: 0.5rem;
+    top: 50%;
+    transform: translateY(-50%);
+    border: none;
+    width: 48px;
+    height: 48px;
+    cursor: pointer;
+    border-radius: 50%;
+    font-size: 1.4rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--text-color);
+    background: transparent;
+    transition: all 0.3s ease;
+}
+
+.prompt__form-button:hover{
+    background: var(--button-hover-color);
+}
+
+.prompt__form-button#sendButton{
+    transform: translateY(-50%) scale(0)
+}
+
+.prompt__form-input:valid
+~ .prompt__form-button#sendButton{
+    transform: translateY(-50%) scale(1)
+}
+
+.prompt__form-input:valid
+~ #deleteButton{
+    right: 3.5rem;
+}
+
+.prompt__disclaim{
+    text-align: center;
+    color: var(--placeholder-color);
+    font-size: 0.85rem;
+    margin-top: 1rem;
+}
