--- a/Gemini Clone/style.css
+++ b/Gemini Clone/style.css
@@ -233,3 +233,81 @@ body.hide-header .header{
     font-size: 0.85rem;
     margin-top: 1rem;
 }
+
+.chats{
+    padding: 2rem 1rem 10rem;
+    max-height: 100%;
+    overflow-y: auto;
+    scrollbar-color: #999 transparent;
+}
+
+.chats .message--incoming{
+    margin-top: 1.5rem;
+}
+
+.chats .message--outgoing:not(:first-child){
+    margin-top: 40px;
+}
+
+.chats .message__content{
+    display: flex;
+    gap: 1.5rem;
+    width: 100%;
+    align-items: flex-start;
+    gap: 1.5rem;
+    width: 100%;
+}
+
+.chats .message__text{
+    color: var(--text-color);
+    white-space: pre-wrap;
+    margin-top: 10px;
+}
+
+.hide{
+    display: none !important;
+}
+
+.chats .message--error .message__text{
+    color: #e55865;
+}
+
+.chats  .message--loading .message__text{
+    display: none;
+}
+
+.chats .message__avatar{
+    width: 40px;
+    height: 40px;
+    object-fit: cover;
+    border-radius: 50%;
+    object-fit: top center;
+}
+
+.chats .message--loading .message__avatar{
+    animation: rotate 3s linear infinite;
+}
+
+@keyframes rotate {
+    100%{
+        transform: rotate(360deg);
+    }
+}
+
+.chats .message__icon{
+    color: var(--text-color);
+    cursor: pointer;
+    height: 35px;
+    width: 35px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: none;
+    font-size: 1.25rem;
+    margin-left: 3.5rem;
+}
+
+.chats .message__icon:hover{
+    background: var(--secondary-color);
+}
