--- a/Gemini Clone/style.css
+++ b/Gemini Clone/style.css
@@ -44,7 +44,7 @@ body{
     background: var(--primary-color);
 }
 
-.header, .prompt__form{
+.header, .chats .message, .chats .message .message__content, .prompt__form{
     margin: 0 auto;
     max-width: 824px;
 }
@@ -214,12 +214,12 @@ body.hide-header .header{
 }
 
 .prompt__form-button#sendButton{
-    transform: translateY(-50%) scale(0)
+    transform: translateY(-50%) scale(0);
 }
 
 .prompt__form-input:valid
 ~ .prompt__form-button#sendButton{
-    transform: translateY(-50%) scale(1)
+    transform: translateY(-50%) scale(1);
 }
 
 .prompt__form-input:valid
@@ -251,8 +251,6 @@ body.hide-header .header{
 
 .chats .message__content{
     display: flex;
-    gap: 1.5rem;
-    width: 100%;
     align-items: flex-start;
     gap: 1.5rem;
     width: 100%;
@@ -272,7 +270,7 @@ body.hide-header .header{
     color: #e55865;
 }
 
-.chats  .message--loading .message__text{
+.chats .message--loading .message__text{
     display: none;
 }
 
@@ -306,8 +304,161 @@ body.hide-header .header{
     background: none;
     font-size: 1.25rem;
     margin-left: 3.5rem;
+    transition: background 0.3s ease;
 }
 
 .chats .message__icon:hover{
-    background: var(--secondary-color);
+    background: var(--secondary-hover-color);
+}
+
+.chats .message__loading-indicator{
+    display: none;
+    gap: 0.6rem;
+    width: 100%;
+    flex-direction: column;
+    margin-bottom: 20px;
+}
+
+.chats .message--loading .message__loading-indicator{
+    display: flex;
+}
+
+.chats .message__loading-indicator .message__loading-bar{
+    height: 1rem;
+    width: 100%;
+    border-radius: 0.135rem;
+    background-position: -800px 0;
+    background: linear-gradient(to right, #2563eb60 30%, var(--primary-color) 60%, #2563eb60);
+    animation: loading 3s linear infinite;
+}
+
+.chats .message__loading-indicator .message__loading-bar:first-child{
+    width: 85%;
+}
+
+.chats .message__loading-indicator .message__loading-bar:last-child{
+    width: 70%;
+}
+
+@keyframes loading {
+    0%{
+        background-position: -800px 0;
+    }
+    50%{
+        background-position: 0px 0;
+    }
+    100%{
+        background-position: 800px 0;
+    }
+}
+
+.code__copy-btn{
+    background-color: transparent;
+    border: none;
+    color: var(--text-color);
+    border-radius: 5px;
+    cursor: pointer;
+    position: absolute;
+    right: 10px;
+    top: 12px;
+    z-index: 10;
+    font-size: 18px;
+}
+
+p{
+    margin-bottom: 10px;
+}
+
+ul{
+    list-style: disc inside;
+    margin-left: 20px;
+}
+
+ol{
+    margin-left: 40px;
+}
+
+strong{
+    font-weight: bold;
+}
+
+em{
+    font-size: italic;
+}
+
+a{
+    color: #1e90ff;
+    text-decoration: none;
+}
+
+th,
+td{
+    border: 1px solid;
+    text-align: left;
+    padding: 10px;
+}
+
+pre{
+    position: relative;
+    background-color: var(--secondary-color);
+    padding: 10px 0 0;
+    font-family: monospace;
+    font-size: 14px;
+    border-radius: 10px;
+    margin: 0;
+    overflow-x: auto;
+}
+
+code{
+    margin-top: 30px;
+    border-radius: 5px;
+    color: inherit;
+}
+
+.code__language-label{
+    position: absolute;
+    font-weight: bold;
+    top: 10px;
+    left: 12px;
+    color: var(--placeholder-color);
+    font-size: 14px;
+    text-transform: capitalize;
+}
+
+.hljs{
+    background-color: var(--secondary-color);
+}
+
+blockquote{
+    padding-left: 60px;
+    line-height: 2.5rem;
+    color: var(--text-color);
+}
+
+@media screen and (max-width: 980px) {
+    .header{
+        padding: 0 2rem;
+    }
+    .header__title{
+        line-height: 2.8rem;
+    }
+    .header__title h1{
+        font-size: 2.7rem;
+    }
+    .header__title h2{
+        font-size: 2.5rem;
+    }
+    .suggests{
+        justify-content: center;
+    }
+    .suggests__item:nth-child(3),
+    .suggests__item:nth-child(4){
+        display: none;
+    }
+    .message{
+        padding: 0 1.5rem;
+    }
+    .prompt__disclaim{
+        font-size: 0.8rem;
+    }
 }
