--- a/Date Count/style.css
+++ b/Date Count/style.css
@@ -156,6 +156,19 @@ html, body{
     align-items: center;
     display: flex;
     margin-right: 10px;
+    transition: all 0.2s ease-in-out;
+    /* 
+    transform: animate 0.5s ease-in-out; */
+}
+
+@keyframes animate{
+    0%{
+        transform: rotateY(0);
+    }
+    100%{
+        transform: rotate(100deg);
+    }
+    
 }
 
 .toggle span{
@@ -208,7 +221,7 @@ html, body{
 .calendar-days div span:nth-child(1),
 .calendar-days div span:nth-child(3){
     width: 2px;
-    height: 100%;
+    height: 0;
     background-color: var(--color-text);
 }
 
@@ -260,4 +273,62 @@ html, body{
 
 .calendar-days div:hover span:nth-child(4){
     transition-delay: 0.6s ease-in-out;
+}
+
+.calendar-days div.curr-date{
+    background-color: var(--blue);
+    color: var(--white);
+    border-radius: 50%;
+    font-weight: 600;
+    font-size: 20px;
+    position: relative;
+    z-index: 1;
+    transition: all 0.2s ease-in-out;
+    box-shadow: 0 0 10px var(--blue);
+    cursor: pointer;
+}
+
+.calendar-days div.curr-date span{
+    display: none;
+}
+
+
+.month-list{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: var(--bg-main);
+    padding: 20px;
+    color: var(--color-text);
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    gap: 5px;
+    transform: scale(1.5);
+    visibility: hidden;
+    pointer-events: none;
+}
+
+.month-list.show{
+    transform: scale(1);
+    visibility: visible;
+    pointer-events: visible;
+}
+
+.month-list > div{
+    display: grid;  
+    place-items: center;
+}
+
+.month-list > div > div{
+    width: 100%;
+    padding: 5px 20px;
+    border-radius: 10px;
+    text-align: center;
+    cursor: pointer;
+}
+
+.month-list > div > div:hover{
+    background-color: var(--color-hover);
 }
