--- a/Date Count/style.css
+++ b/Date Count/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
+
 :root{
     --dark-body: #4d4c5a;
     --dark-main: #141529;
@@ -371,4 +374,42 @@ html, body{
 .month-list > .month-item.current-month{
     background-color: var(--blue);
     color: var(--white);
+}
+
+.date-result{
+    display: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 25px;
+    font-weight: 600;
+    color: var(--color-text);
+    padding: 10px;
+    margin-top: -100px;
+}
+.date-result span{
+    font-weight: 400;
+    color: var(--blue);
+    display: flex;
+    flex-direction: column;
+    font-size: 20px;
+}
+
+.dark .date-result span{
+    color: var(--dark-text);
+    font-weight: 400;
+    display: flex;  
+    flex-direction: column;
+    font-size: 20px;
+}
+
+.dayButton{
+    display: flex;
+    justify-content: center;
+    align-items: center;;
+    background-color: var(--bg-second);
+    border-radius: 20px;
+    cursor: pointer;
+    padding: 10px 20px;
+    transition: all 0.2s ease-in-out;
+    margin-bottom: 30px;
 }
