--- a/Date Count/style.css
+++ b/Date Count/style.css
@@ -383,8 +383,8 @@ html, body{
     font-size: 25px;
     font-weight: 600;
     color: var(--color-text);
-    padding: 10px;
-    margin-top: -100px;
+    margin: -20px;
+    padding: -20px;
 }
 .date-result span{
     font-weight: 400;
