--- a/Date Count/responsive.css
+++ b/Date Count/responsive.css
@@ -91,8 +91,11 @@
 /* iPhone 14 Pro - Portrait */
 @media (max-width: 430px) and (max-height: 932px) {
     .calendar {
-        width: 90%;  
-        padding: 15px;
+        width: 100%;  
+        padding: 20px;
+        margin: 30px;
+        justify-content: center;
+        align-items: center;
     }
 
     .calendar-header {
@@ -146,7 +149,7 @@
 }
 
 /* iPhone 14 Pro - Landscape */
-@media (max-width: 1179px) and (max-height: 430px) {
+/* @media (max-width: 1179px) and (max-height: 430px) {
     .calendar {
         width: 80%;
         padding: 20px;
@@ -197,7 +200,7 @@
         width: 20px;
         height: 20px;
     }
-}
+} */
 
 /* responsive.css */
 
@@ -208,8 +211,9 @@
         width: 100%;  /* Full width, no restrictions */
         max-width: 100%;  /* Prevent it from exceeding the viewport */
         padding: 15px;  /* Adjust padding to prevent cut-off */
-        box-sizing: border-box;  /* Include padding in width calculation */
-        overflow-x: hidden;  /* Prevent horizontal overflow */
+        margin: 30px;
+        justify-content: center;
+        align-items: center;
     }
 
     /* Calendar header */
