--- a/Date Count/style.css
+++ b/Date Count/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap');
 
 
 :root{
@@ -275,10 +276,21 @@ html, body{
     justify-items: center;
     align-items: center;
     display: flex;
-    margin-right: 10px;
-    transition: all 0.2s ease-in-out;
+    margin-right: 15px;
+    scale: 1.2;
+    transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
     /* 
     transform: animate 0.5s ease-in-out; */
+}
+
+.toggle i.fa-moon, .toggle i.fa-sun {
+    opacity: 1;
+    transform: scale(1.2);
+}
+
+.toggle i.fade-out {
+    opacity: 0;
+    transform: scale(0.1);
 }
 
 .toggle span{
@@ -293,6 +305,7 @@ html, body{
     border-radius: 14px;
     background-color: var(--bg-second);
     cursor: pointer;
+    transition: all 0.3s ease-in-out;
 }
 
 .dark-mode-switch-ident{
@@ -473,10 +486,57 @@ html, body{
     cursor: pointer;
     transform: scale(1.5);
     }
+    .dark-mode-switch:hover{
+        background-color: #666666;
+        scale: 1.1;
+        transition: all 0.3s ease-in-out;
+    }
 }
 
 .resetButton:active{
     transform: scale(1.2);
     background-color: #01f5dd;
     color: var(--color-text);
+}
+
+.header {
+    cursor: pointer;
+    padding: 20px;
+    text-align: center;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease-in-out;
+}
+
+.header h1 {
+    font-size: 36px;
+    padding: 10px;
+    font-family: "Gloria Hallelujah", cursive;
+}
+
+.header:hover{
+    background-color: #01f5dd;
+    transform: scale(1.1);
+}
+
+.alert-toggle {
+    background-color: #ff9800;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 5px;
+    font-weight: bold;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: background-color 0.3s ease, transform 0.2s;
+}
+
+.alert-toggle:hover {
+    background-color: #e68900;
+    transform: scale(1.05);
+}
+
+.alert-toggle:focus {
+    outline: 3px solid #333;
 }
