--- a/Date Count/style.css
+++ b/Date Count/style.css
@@ -517,26 +517,23 @@ html, body{
 .header:hover{
     background-color: #01f5dd;
     transform: scale(1.1);
-}
-
-.alert-toggle {
-    background-color: #ff9800;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    font-size: 16px;
-    cursor: pointer;
-    border-radius: 5px;
-    font-weight: bold;
+    text-align: center;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    transition: background-color 0.3s ease, transform 0.2s;
 }
 
-.alert-toggle:hover {
-    background-color: #e68900;
+.toggle-todo{
+    transition: all 0.3s ease-in-out;
+    cursor: pointer;
+    font-size: 2em;
+    transition: color 0.3s ease-in-out, transform 0.3s ease-in-out;
+}
+
+.toggle-todo:hover{
+    padding: 10px;
     transform: scale(1.05);
 }
 
-.alert-toggle:focus {
-    outline: 3px solid #333;
+.toggle-todo.fade {
+    opacity: 0;
+    transition: opacity 0.3s ease;
 }
