update: prevent 2 click header

--- a/Date Count/style.css
+++ b/Date Count/style.css
@@ -506,6 +506,7 @@ html, body{
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease-in-out;
+    margin-top: 20px;
 }
 
 .header h1 {
@@ -528,12 +529,20 @@ html, body{
     transition: color 0.3s ease-in-out, transform 0.3s ease-in-out;
 }
 
-.toggle-todo:hover{
-    padding: 10px;
-    transform: scale(1.05);
+@media (hover: hover) and (pointer: fine) {
+    .toggle-todo:hover{
+        padding: 10px;
+        transform: scale(1.05);
+    }
 }
 
 .toggle-todo.fade {
     opacity: 0;
     transition: opacity 0.3s ease;
+}
+
+.toggle-todo.disabled {
+    pointer-events: none;
+    cursor: not-allowed;
+    opacity: 0.5;
 }
