update: body change by mode

--- a/Date Count/style.css
+++ b/Date Count/style.css
@@ -15,7 +15,7 @@
     --light-hover: #edf0f5;
     --light-text: #151426;
 
-    --blue: #0000ff;
+    --curr-color: #0000ff;
     --white: #fff;
 
     --shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
@@ -38,6 +38,10 @@
     --bg-second: var(--light-second);
     --color-hover: var(--light-hover);
     --color-text: var(--light-text);
+}
+
+body.count-down{
+    --curr-color: rgb(250, 76, 253);
 }
 
 *{
@@ -195,21 +199,21 @@ html, body{
 
 .calendar-days div.curr-date,
 .calendar-days div.curr-date:hover{
-    background-color: var(--blue);
+    background-color: var(--curr-color);
     color: var(--white);
     border-radius: 50%;
     font-weight: 600;
     font-size: 20px;
     position: relative;
     transition: all 0.2s ease-in-out;
-    box-shadow: 0 0 10px var(--blue);
+    box-shadow: 0 0 10px var(--curr-color);
     transition: all 0.2s ease-in-out;
     cursor: pointer;
 }
 
 .calendar-days div.curr-date:hover{
     transform: scale(1.1);
-    box-shadow: 0 0 20px var(--blue);
+    box-shadow: 0 0 20px var(--curr-color);
 }
 
 .dark .calendar-days div.curr-date{
@@ -296,7 +300,31 @@ html, body{
 .toggle span{
     margin-right: 10px;
     color: var(--color-text);
+    opacity: 1;
+    transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
 }
+
+.toggle span.fade-out {
+    opacity: 0;
+    transform: scale(0.1);
+}
+
+.toggle span.fade-in {
+    opacity: 0;
+    transform: scale(1.2);
+}
+
+/* Fade animation classes */
+.fade-out {
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+
+.fade-in {
+    opacity: 1;
+    transition: opacity 0.3s ease;
+}
+
 
 .dark-mode-switch{
     position: relative;
@@ -435,7 +463,7 @@ html, body{
 }
 
 .month-list > .month-item.current-month{
-    background-color: var(--blue);
+    background-color: var(--curr-color);
     color: var(--white);
 }
 
@@ -450,7 +478,7 @@ html, body{
 }
 .date-result span{
     font-weight: 400;
-    color: var(--blue);
+    color: var(--curr-color);
     display: flex;
     font-size: 20px;
 }
