--- a/Date Count/style.css
+++ b/Date Count/style.css
@@ -288,6 +288,7 @@ html, body{
     transition: transform 0.4s cubic-bezier(0.25, 0.8, 0.25, 1), opacity 0.4s ease-out;
     animation: reverseRotate 0.85s ease-in-out forwards;
     cursor: pointer;
+    padding: 10px;
 }
 
 .today-info span{
