--- a/Date Count/style.css
+++ b/Date Count/style.css
@@ -686,3 +686,18 @@ html, body{
     75% { transform: translate(-10px, -10px); }
     100% { transform: translate(0, 0); }
 }
+
+
+.hover-box {
+    padding: 20px;
+    background-color: #3498db;
+    color: white;
+    font-size: 18px;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.hover-box.active {
+    background-color: #2ecc71;  /* Màu xanh khi di chuột trong thời gian đủ */
+}
