--- a/Date Count/style.css
+++ b/Date Count/style.css
@@ -744,3 +744,43 @@ html, body{
 .calendar-day-date.active {
     pointer-events: none; /* Không cho phép calendar-day-date nhận sự kiện khi context menu hiển thị */
 }
+
+/* ---------------------------------- */
+
+/* Style cho modal */
+.modal {
+    display: none; /* Ẩn modal mặc định */
+    position: fixed;
+    z-index: 1; /* Đảm bảo modal nằm trên các phần tử khác */
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Nền mờ */
+}
+
+/* Nội dung modal */
+.modal-content {
+    background-color: #fff;
+    margin: 15% auto;
+    padding: 20px;
+    border-radius: 5px;
+    width: 50%;
+}
+
+/* Nút đóng */
+.close {
+    color: #aaa;
+    font-size: 28px;
+    font-weight: bold;
+    position: absolute;
+    top: 10px;
+    right: 25px;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
