--- a/Date Count/style.css
+++ b/Date Count/style.css
@@ -779,11 +779,19 @@ html, body{
     background-color: #fff;
     margin: 15% auto;
     padding: 20px;
-    border-radius: 10px;
+    border-radius: 20px;
     width: 50%;
     max-width: 600px; /* Đặt chiều rộng tối đa cho modal */
     box-shadow: 0 12px 12px rgba(0, 0, 0, 0.3);
     
+}
+
+.modal-content h2 {
+    font-size: 30px;
+    margin-bottom: 20px;
+    text-align: left;
+    margin-left: 15px;
+    color: #333;
 }
 
 /* Nút đóng */
@@ -815,18 +823,52 @@ html, body{
     margin: 20px;
     padding: 15px;
     border: 1px solid #ccc;
-    border-radius: 6px;
+    border-radius: 15px;
     background-color: #f9f9f9;
     transition: all 0.3s ease-in-out;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     font-family: 'Courier New', Courier, monospace;
-  }
+}
 
-#event-form label {
-    display: block;
-    margin-top: 10px;
+#event-form h3{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+}
+
+#event-form h3 span{
+    font-size: 22px;
+    text-align: center;
+    overflow: hidden;
+    color: #333;
+    transition: all 0.3s ease-in-out;
+    padding: 10px;
+    margin: 5px;
+}
+
+#event-form h3 span:hover{
+    box-shadow: 0 8px 8px rgba(0, 0, 0, 0.2);
+    transform: scale(1.05);
+    border-radius: 10px;
+}
+
+#event-form label{
     font-weight: bold;
 }
+
+#event-form label span {
+    font-size: 18px;
+    color: #333;
+    margin-left: 5px;
+    border-radius: 10px;
+}
+
+/* #event-form label span:hover{
+    box-shadow: 0 8px 8px rgba(0, 0, 0, 0.2);
+    transform: scale(1.05);
+    border-radius: 10px;
+} */
 
 #event-form input,
 #event-form textarea {
@@ -835,6 +877,18 @@ html, body{
     margin-top: 4px;
     margin-bottom: 8px;
     box-sizing: border-box;
+    border-radius: 8px;
+    border: 1px solid #ccc;
+    resize: none;
+    transition: all 0.05s ease-in-out;
+}
+
+#event-form input:focus,
+#event-form textarea:focus {
+    border-color: #007BFF;
+    outline: 2px solid #007BFF;
+    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+    
 }
 
 #event-form button {
@@ -844,10 +898,23 @@ html, body{
     background-color: #007BFF;
     color: white;
     border: none;
-    border-radius: 4px;
+    border-radius: 8px;
     cursor: pointer;
+    transition: all 0.3s ease-in-out;
 }
 
 #event-form button:hover {
     background-color: #0056b3;
+}
+
+#event-form #event-type{
+    width: 100%;
+    padding: 8px;
+    margin-top: 4px;
+    margin-bottom: 8px;
+    box-sizing: border-box;
+    border-radius: 8px;
+    border: none;
+    resize: none;
+    transition: all 0.05s ease-in-out;
 }
