--- a/Date Count/style.css
+++ b/Date Count/style.css
@@ -920,7 +920,7 @@ html, body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 20px;
+    margin: 20px 80px;
 }
 
 /* Nút event-category */
@@ -947,9 +947,9 @@ html, body{
 
 /* Menu event-category */
 .event-category-menu {
-    display: none;
+    //display: none;
     position: absolute;
-    top: 100%;
+    top: 90%;
     border: 4px solid #007BFF;
     border-radius: 0px 0px 10px 10px;
     background-color: white;
@@ -980,12 +980,27 @@ html, body{
 }
 
 .event-category-item:hover {
-    background-color: #f1f1f1;
+    background-color: #01f5dd;
+    z-index: 10000;
+    border: 4px solid #ed08f9;
+    border-radius: 5px;
+    scale: 1.1;
+    font-weight: bolder;
 }
 
 /* Loại bỏ border dưới item cuối cùng */
 .event-category-item:last-child {
-    border-bottom: none;
+    border-radius: 5px;
+}
+
+.event-category-item:last-child:hover {
+    border-radius: 5px;
+    background-color: #01f5dd;
+    z-index: 10000;
+    border-bottom: 5px solid #ed08f9;
+    scale: 1.1;
+    font-weight: bolder;
+
 }
 
 /* Hiệu ứng focus cho các item */
