--- a/Date Count/style.css
+++ b/Date Count/style.css
@@ -968,6 +968,7 @@ html, body{
 
 /* Định dạng cho các item trong event-category */
 .event-category-item {
+    position: relative;
     padding: 8px 12px;
     border-bottom: 1px solid #f1f1f1;
     cursor: pointer;
@@ -982,25 +983,23 @@ html, body{
 .event-category-item:hover {
     background-color: #01f5dd;
     z-index: 10000;
-    border: 4px solid #ed08f9;
     border-radius: 5px;
-    scale: 1.1;
+    scale: 1;
     font-weight: bolder;
 }
 
 /* Loại bỏ border dưới item cuối cùng */
 .event-category-item:last-child {
     border-radius: 5px;
+    z-index: 10000;
 }
 
 .event-category-item:last-child:hover {
     border-radius: 5px;
     background-color: #01f5dd;
     z-index: 10000;
-    border-bottom: 5px solid #ed08f9;
     scale: 1.1;
     font-weight: bolder;
-
 }
 
 /* Hiệu ứng focus cho các item */
@@ -1010,17 +1009,63 @@ html, body{
     outline: none;
 }
 
+/* Color options */
+.color-options {
+    position: relative;
+    display: flex;
+    gap: 8px;
+    margin: 20px;
+}
+
+.color-option {
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    cursor: pointer;
+    border: 2px solid transparent;
+    transition: all 0.3s ease-in-out;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.color-option.selected {
+    border-color: #5f6368;
+}
+
+.color-option:hover {
+    scale: 1.2;
+}
+
+.color-option:hover {
+    border-color: #5f6368;
+    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+}
+
+/* Color variants */
+.color-default { background-color: #1a73e8; }
+.color-red { background-color: #d50000; }
+.color-orange { background-color: #f4511e; }
+.color-yellow { background-color: #f6bf26; }
+.color-green { background-color: #0b8043; }
+.color-teal { background-color: #009688; }
+.color-blue { background-color: #3f51b5; }
+.color-purple { background-color: #8e24aa; }
+.color-pink { background-color: #e67c73; }
+
 #event-form button {
-    margin-top: 15px;
+    margin: 15px;
     padding: 10px;
-    width: 100%;
+    width: 30%;
     background-color: #007BFF;
     color: white;
     border: none;
-    border-radius: 8px;
+    border-radius: 10px;
     cursor: pointer;
     transition: all 0.3s ease-in-out;
+    margin-left: 70%;
 }
+
 
 #event-form button:hover {
     background-color: #0056b3;
