--- a/Date Count/style.css
+++ b/Date Count/style.css
@@ -962,6 +962,40 @@ html, body{
   cursor: pointer;
 }
 
+.event-type-color .color-option {
+    width: 20px;
+    height: 20px;
+    display: inline-block;
+    border-radius: 50%;
+    margin: 5px;
+    cursor: pointer;
+}
+
+.event-type-color .hidden-colors {
+    display: none;
+    position: absolute;
+    top: 40px;
+    left: 0;
+    z-index: 10;
+    background-color: white;
+    border: 1px solid #ccc;
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.color-option.selected {
+    border: 3px solid #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+#toggle-colors {
+    cursor: pointer;
+    font-size: 16px;
+    margin-left: 10px;
+}
+
+
 .event-type-color i.fa-caret-down {
     font-size: 14px;
     margin-left: 5px;
